feat: ignorable fields
